<resources>
    <string name="app_name">App</string>
    //MainActivity
    <string name="txtEslogan">El evento de tus sueños, al alcance de tus manos</string>
    //registro_como_empresa
    <string name="txtDniNifLogin">DNI / NIF:</string>
    <string name="txtContraseñaLogin">Contraseña:</string>
    <string name="txtRegistrarseLogin"> <u> ¿No tienes una cuenta? Registrate aquí </u></string>
    <string name="btnIniciarSesionLogin">Iniciar sesion</string>
    <string name="txtResgistroEmpresaOIndividuo">¿Quieres continuar como empresa o persona independiente? </string>


    //menu desplegable
    <string name="txtUsuario">Usuario</string>
    <string name="txtBodas">Bodas</string>
    <string name="txtBautizos">Bautizos</string>
    <string name="txtComuniones">Comuniones</string>
    <string name="txtCumpleaños">Cumpleaños</string>
    <string name="txtAniversarios">Aniversarios</string>
    <string name="txtComidasYCenas">Comidas y Cenas</string>
    <string name="txtPresentaciones">Presentaciones</string>
    <string name="txtOtros">Otros</string>
    <string name="txtCerrarMenu">X</string>

    //comoRegistrarte
    <string name="btnComoEmpresa">Empresa</string>
    <string name="btnComoIndividuo">Individuo</string>

    //Registro como individuo
    <string name="txtRegistroIndividuoNombreCompleto">Nombre completo:</string>
    <string name="txtRegistroIndividuoDni">DNI:</string>
    <string name="txtRegistroIndividuoEmail">Correo electronico:</string>
    <string name="txtRegistroIndividuoTelefono">Teléfono:</string>
    <string name="txtRegistroIndividuoPais">País:</string>
    <string name="txtRegistroIndividuoDireccion">Dirección:</string>
    <string name="txtRegistroIndividuoContraseña">Contraseña:</string>
    <string name="txtRegistroIndividuoRepetirContraseña">Repite la contraseña:</string>

    //HINT TEXTURAKO STRING-AK REGISTRATZEKOAN INDIBIDUAL BEZALA
    <string name="txtRegistroIndividuoNombreCompletoHint">Nombre completo</string>
    <string name="txtRegistroIndividuoDniHint">DNI</string>
    <string name="txtRegistroIndividuoEmailHint">Correo electronico</string>
    <string name="txtRegistroIndividuoTelefonoHint">Teléfono</string>
    <string name="txtRegistroIndividuoPaisHint">País</string>
    <string name="txtRegistroIndividuoDireccionHint">Dirección</string>
    <string name="txtRegistroIndividuoContraseñaHint">Contraseña</string>
    <string name="txtRegistroIndividuoRepetirContraseñaHint">Repite la contraseña</string>

    <string name="checkBoxTerminosYCondiciones"> <u>Aceptas los terminos y condiciones</u></string>

    //Registro como empresa
    <string name="txtRegistroEmpresaNombre">Nombre empresa:</string>
    <string name="txtRegistroEmpresaNif">NIF:</string>
    <string name="txtRegistroEmpresaEmail">Correo electronico:</string>
    <string name="txtRegistroEmpresaTelefono">Teléfono:</string>
    <string name="txtRegistroEmpresaPais">País:</string>
    <string name="txtRegistroEmpresaDireccion">Dirección:</string>
    <string name="txtRegistroEmpresaContraseña">Contraseña:</string>
    <string name="txtRegistroEmpresaRepetirContraseña">Repite la contraseña:</string>


    <string name="txtRegistroEmpresaNombreHint">Nombre empresa</string>
    <string name="txtRegistroEmpresaNifHint">NIF</string>
    <string name="txtRegistroEmpresaEmailHint">Correo electronico</string>
    <string name="txtRegistroEmpresaTelefonoHint">Teléfono</string>
    <string name="txtRegistroEmpresaPaisHint">País</string>
    <string name="txtRegistroEmpresaDireccionHint">Dirección</string>
    <string name="txtRegistroEmpresaContraseñaHint">Contraseña</string>
    <string name="txtRegistroEmpresaRepetirContraseñaHint">Repite la contraseña</string>


    //registro_como_empresa/registro_como_individuo
    <string name="btnSiguiente">Siguiente</string>
    <string name="btnRegistrar">Registrar</string>


    //terminos y condiciones
    <string name="txtTituloTerminos"> <b>TÉRMINOS Y CONDICIONES DE USO DE LA APLICACIÓN DREAM EVENEMENT</b> </string>
    <string name="txtTerminos">
        1. Aceptación de los Términos y Condiciones
    \n\n
        1.1. Al utilizar la aplicación móvil "Dream Evenement" ("la Aplicación"), aceptas y te comprometes a cumplir estos Términos y Condiciones de Uso. Si no estás de acuerdo con estos términos, por favor, no utilices la Aplicación.
    \n\n
        2. Registro y Cuentas de Usuario
    \n\n
        2.1. Registro: Para utilizar ciertas características de la Aplicación, es necesario que te registres y crees una cuenta de usuario. Debes proporcionar información precisa, completa y actualizada durante el proceso de registro.
    \n\n
        2.2. Información de Inicio de Sesión: Eres responsable de mantener la confidencialidad de tu información de inicio de sesión (nombre de usuario y contraseña) y de todas las actividades que ocurran bajo tu cuenta de usuario. Si sospechas que tu cuenta ha sido comprometida, debes notificarnos de inmediato.
    \n\n
        2.3. Menores de Edad: La Aplicación está destinada a usuarios mayores de 18 años. Si eres menor de edad, necesitas el consentimiento de un padre o tutor legal para utilizar la Aplicación.
    \n\n
        3. Reservas de Eventos
    \n\n
        3.1. Reservas: La Aplicación permite a los usuarios realizar reservas para eventos. La disponibilidad de eventos y los términos de reserva pueden variar y estar sujetos a cambios sin previo aviso.
    \n\n

        3.2. Políticas de Eventos: Al realizar una reserva a través de la Aplicación, aceptas las políticas y términos específicos de cada evento, incluyendo, pero sin limitarse a, plazos de cancelación, tarifas aplicables, políticas de reembolso y restricciones.
    \n\n
        3.3. Pagos: Los pagos realizados a través de la Aplicación se procesarán de acuerdo con las políticas de pago establecidas por el organizador del evento. Dream Evenement no es responsable de problemas relacionados con pagos o transacciones financieras.
    \n\n
        4. Uso Adecuado de la Aplicación
    \n\n
        4.1. Conducta del Usuario: Aceptas utilizar la Aplicación de manera responsable y respetuosa. No debes utilizar la Aplicación para actividades ilegales o fraudulentas ni para infringir los derechos de terceros.
    \n\n
        4.2. Contenido Generado por el Usuario: Si proporcionas contenido (comentarios, reseñas, imágenes, etc.) a través de la Aplicación, garantizas que tienes los derechos necesarios para compartir dicho contenido y otorgas a Dream Evenement una licencia no exclusiva para utilizar, modificar y mostrar dicho contenido en relación con la Aplicación.
    \n\n
        5. Modificaciones y Terminación
    \n\n
        5.1. Modificaciones: Dream Evenement se reserva el derecho de modificar estos Términos y Condiciones en cualquier momento. Te notificaremos de cualquier cambio mediante una notificación en la Aplicación o por correo electrónico. El uso continuado de la Aplicación después de la notificación de cambios constituirá tu aceptación de los términos modificados.
    \n\n
        5.2. Terminación: Dream Evenement se reserva el derecho de suspender o terminar tu cuenta y tu acceso a la Aplicación en caso de incumplimiento de estos Términos y Condiciones.
    \n\n
        6. Privacidad
    \n\n
        6.1. Privacidad: Tu privacidad es importante para nosotros. Consulta nuestra Política de Privacidad para obtener información sobre cómo recopilamos, utilizamos y protegemos tus datos personales.
    \n\n
        7. Limitación de Responsabilidad
    \n\n
        7.1. Exención de Responsabilidad: Dream Evenement no se hace responsable de los eventos o servicios ofrecidos a través de la Aplicación, ni de los problemas que puedan surgir en relación con los mismos. La Aplicación se proporciona tal cual y según disponibilidad.
</string>

    //(Uso general)
    <string name="btnRetroceder">←</string>
</resources>