<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beigeCrema">

    <!-- Logo (1/3 de la pantalla) -->
    <Button
        android:id="@+id/btnRegistroIndividualRetroceder"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:backgroundTint="@color/boton"
        android:gravity="center"
        android:text="@string/btnRetroceder"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Formulario de Registro (2/3 de la pantalla) -->

    <ImageView
        android:id="@+id/logoImageViewRegistroIndividual"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/copy_of_2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <!-- Campos del formulario de registro con etiquetas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoNombreCompleto"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoNombreCompletoHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualDni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoDni"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualDni"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoDniHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoTelefono"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualTelefono"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoTelefonoHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoEmail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoEmailHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualPais"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoPais"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualPais"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoPaisHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualDirecion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoDireccion"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualDireccion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="25sp"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoDireccionHint" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoContraseña"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualContraseña"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColorHint="@color/gris"
                android:hint="@string/txtRegistroIndividuoContraseñaHint"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegitroIndividualRepetirContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/txtRegistroIndividuoRepetirContraseña"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginStart="25sp"
                android:layout_marginEnd="15sp"/>

            <EditText
                android:id="@+id/edtRegistroIndividualRepetirContraseña"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/txtRegistroIndividuoRepetirContraseñaHint"
                android:textColorHint="@color/gris"
                android:layout_marginEnd="25sp"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- Checkbox y Botón de Registro -->
        <CheckBox
            android:id="@+id/checkRegistroIndividualTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxTerminosYCondiciones"
            android:layout_marginStart="25sp"
            android:layout_marginEnd="15sp"/>

        <Button
            android:id="@+id/btnRegistroIndividualRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/boton"
            android:text="@string/btnRegistrar"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"/>

    </LinearLayout>
</LinearLayout>
