<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".comoRegistrarte"
    android:background="@color/beigeCrema">

    <TextView
        android:id="@+id/txtResgistroEmpresaOIndividuo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtResgistroEmpresaOIndividuo"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466" />

    <Button
        android:id="@+id/btnComoEmpresa"
        android:layout_width="125sp"
        android:layout_height="75sp"
        android:backgroundTint="@color/boton"
        android:text="@string/btnComoEmpresa"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtResgistroEmpresaOIndividuo"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/btnComoIndividuo"
        android:layout_width="125sp"
        android:layout_height="75sp"
        android:text="@string/btnComoIndividuo"
        android:backgroundTint="@color/boton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnComoEmpresa"
        app:layout_constraintVertical_bias="0.354" />

    <Button
        android:id="@+id/btnComoRegistrarteRetroceder"
        android:layout_width="75sp"
        android:layout_height="75sp"
        android:text="@string/btnRetroceder"
        android:gravity="center"
        android:textSize="50sp"
        android:backgroundTint="@color/boton"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgLogoComoRegistrarte"
        android:layout_width="265dp"
        android:layout_height="414dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022"
        app:srcCompat="@drawable/copy_of_2" />

</androidx.constraintlayout.widget.ConstraintLayout>